syntax = "proto3";

package auth;

option go_package = "auth-service/proto;proto";

service AuthService {
  rpc SignUp (SignUpRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ConfirmEmail (ConfirmEmailRequest) returns (Empty);
  rpc ChangePassword (ChangePasswordRequest) returns (Empty);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ConfirmEmailRequest {
  string token = 1;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message AuthResponse {
  string token = 1;
}

message Empty {}
